--- a/frontend/style.css
+++ b/frontend/style.css
@@ -42,3 +42,36 @@ main {
   height: 80px;
   background-color: cyan;
 }
+
+/* Modal Window */
+.modal {
+	display: none;
+	/* display: block; */
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0, 0, 0, .4);
+}
+
+.modal-content {
+	background-color: slategray;
+	margin: 20% auto;
+	padding: 20%;
+	width: 80%;
+	z-index: 2;
+}
+
+.close {
+	float: right;
+	font-size: 28pt;
+	font-weight: bold;
+}
+
+.close:hover {
+	color: springgreen;
+	cursor: pointer;
+}
