--- a/frontend/style.css
+++ b/frontend/style.css
@@ -46,7 +46,6 @@ main {
 /* Modal Window */
 .modal {
 	display: none;
-	/* display: block; */
 	position: fixed;
 	z-index: 1;
 	left: 0;
@@ -54,15 +53,16 @@ main {
 	width: 100%;
 	height: 100%;
 	background-color: rgb(0,0,0);
-	background-color: rgba(0, 0, 0, .4);
+	background-color: rgba(0, 0, 0, .1);
+	backdrop-filter: blur(100px);
 }
 
 .modal-content {
 	background-color: slategray;
-	margin: 20% auto;
-	padding: 20%;
+	margin: 15% auto;
+	padding: 20px;
 	width: 80%;
-	z-index: 2;
+	min-height: 25%;
 }
 
 .close {
