--- a/frontend/style.css
+++ b/frontend/style.css
@@ -41,37 +41,38 @@ main {
   align-content: flex-end;
   height: 80px;
   background-color: cyan;
+  padding: 10px;
 }
 
 /* Modal Window */
 .modal {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgb(0,0,0);
-	background-color: rgba(0, 0, 0, .1);
-	backdrop-filter: blur(100px);
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(100px);
 }
 
 .modal-content {
-	background-color: slategray;
-	margin: 15% auto;
-	padding: 20px;
-	width: 80%;
-	min-height: 25%;
+  background-color: slategray;
+  margin: 15% auto;
+  padding: 20px;
+  width: 80%;
+  min-height: 25%;
 }
 
 .close {
-	float: right;
-	font-size: 28pt;
-	font-weight: bold;
+  float: right;
+  font-size: 28pt;
+  font-weight: bold;
 }
 
 .close:hover {
-	color: springgreen;
-	cursor: pointer;
+  color: springgreen;
+  cursor: pointer;
 }
