--- a/frontend/style.css
+++ b/frontend/style.css
@@ -30,6 +30,8 @@ main {
 .top-menu-bar {
   height: 80px;
   background-color: burlywood;
+  display: flex;
+  align-items: center;
 }
 
 .task-list {
@@ -85,4 +87,13 @@ main {
 
 .task-item {
   font-size: 16pt;
+}
+
+/* Task form */
+#new-task-form {
+  /* align-content: center; */
+  display: flex;
+  /* flex-direction: column; */
+  text-align: center;
+  /* height: 100%; */
 }
