--- a/frontend/style.css
+++ b/frontend/style.css
@@ -102,7 +102,7 @@ main {
 /* Task form */
 #new-task-form {
   /* align-content: center; */
-  display: flex;
+  /* display: flex; */
   /* flex-direction: column; */
   text-align: center;
   /* height: 100%; */
