--- a/frontend/style.css
+++ b/frontend/style.css
@@ -14,9 +14,15 @@ main {
 
 .project-bar {
   width: 300px;
-  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
   background-color: blue;
-  /* margin: 10px; */
+  padding: 10px 0px 10px 10px;
+}
+
+.active {
+  background-color: darkgoldenrod;
+  /* padding: 0px 0px; */
 }
 
 .task-area {
@@ -101,13 +107,17 @@ main {
 
 /* Task form */
 #new-task-form {
-  /* align-content: center; */
-  /* display: flex; */
-  /* flex-direction: column; */
   text-align: center;
-  /* height: 100%; */
 }
 
 .complete {
   text-decoration: line-through;
+}
+
+/* New project form */
+#project-form-container {
+  margin-top: auto;
+  /* margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px; */
 }
