--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 body {
   margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  color: rgb(228, 228, 228);
+  font-family: "Poppins", sans-serif;
 }
 
 main {
@@ -17,17 +21,19 @@ main {
   width: 300px;
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  background-color: rgb(43, 43, 43);
   padding: 10px 0px 10px 10px;
 }
 
 .active {
-  background-color: darkgoldenrod;
+  background-color: rgb(85, 85, 85);
   /* padding: 0px 0px; */
 }
 
 .project-list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Tasks */
@@ -36,26 +42,36 @@ main {
   flex-direction: column;
   width: 100%;
   /* height: 100vh; */
-  background-color: brown;
+  background-color: rgb(85, 85, 85);
 }
 
 .top-menu-bar {
   height: 80px;
-  background-color: burlywood;
+  background-color: rgb(99, 99, 99);
   display: flex;
   align-items: center;
 }
 
+#task-header {
+  /* padding-left: 10px; */
+  margin: auto;
+  text-decoration: underline;
+}
+
 .task-list {
-  background-color: chartreuse;
+  background-color: rgb(85, 85, 85);
   height: 100%;
 }
 
 .btm-menu-bar {
   align-content: flex-end;
-  height: 80px;
-  background-color: cyan;
+  height: 40px;
+  background-color: rgb(99, 99, 99);
   padding: 10px;
+}
+
+#switch-user-container {
+  float: right;
 }
 
 /* Modal Window */
@@ -73,11 +89,15 @@ main {
 }
 
 .modal-content {
-  background-color: slategray;
+  background-color: rgb(39, 39, 39);
   margin: 15% auto;
+  /* margin */
   padding: 20px;
   width: 80%;
   min-height: 25%;
+
+  border: 2px solid rgb(228, 228, 228);
+  border-radius: 10px;
 }
 
 .close {
@@ -89,6 +109,11 @@ main {
 .close:hover {
   color: springgreen;
   cursor: pointer;
+}
+
+/* User Modal */
+#user-form {
+  margin: auto;
 }
 
 /* Task Modal */
@@ -107,13 +132,22 @@ main {
   margin-right: 20px;
 }
 
+.task-items-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 5px 10px;
+}
+
 .task-item {
-  font-size: 16pt;
+  font-size: 14pt;
+  border-bottom: solid 1px rgb(228, 228, 228);
+  margin-bottom: 5px;
 }
 
 /* Task form */
 #new-task-form {
   text-align: center;
+  margin-left: 10px;
 }
 
 .complete {
@@ -126,4 +160,15 @@ main {
   /* margin-bottom: 10px;
   margin-left: 5px;
   margin-right: 5px; */
+}
+
+/* Inputs */
+button,
+input[type="submit"] {
+  background: none;
+  border: solid 1px rgb(228, 228, 228);
+  border-radius: 4px;
+  color: rgb(228, 228, 228);
+
+  font-family: "Poppins", sans-serif;
 }
